feat: added libs.hpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,6 @@ set(SFML_DIR "SFML-2.6.0/lib/cmake/SFML/")
 
 find_package(SFML COMPONENTS graphics audio REQUIRED)
 
-add_executable(Tetris main.cpp)
+add_executable(Tetris main.cpp libs.hpp)
 
 target_link_libraries(Tetris sfml-graphics sfml-audio sfml-window)
